Layout Issue

--- a/views/style.css
+++ b/views/style.css
@@ -101,6 +101,10 @@ body {
     font-style: italic;
 }
 
+.main {
+    margin-top: 100px;
+}
+
 
 
 
